# svenzva_ros

./: .travis.yml  LICENSE.md  README.md  dependencies.rosinstall
iner_arm/: manifest.xml
iner_arm/launch/: display.launch  gazebo.launch
iner_arm/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL
iner_arm/robots/: iner_arm.URDF
iner_gripper/: manifest.xml
iner_gripper/launch/: display.launch  gazebo.launch
iner_gripper/meshes/: link_finger0.STL  link_finger1.STL  link_gripper.STL
iner_gripper/robots/: iner_gripper.URDF
svenzva_demo/: CMakeLists.txt  package.xml
svenzva_demo/config/: book.yaml  old_pnp_demo.yaml  pnp_demo.yaml  record_player.yaml  repeatability.yaml  test_cases.yaml
svenzva_demo/src/: fkine_demo.cpp  full_demo.py  make_circle.py  moveit_jointplayback.py  moveit_tutorial.py  pick_and_place.py  playback_disco.py  test_cases.py  weight.py
svenzva_description/: CMakeLists.txt  README.txt  manifest.xml  package.xml  urdf.rviz
svenzva_description/launch/: display.launch  gazebo.launch  start_simulation_control.launch
svenzva_description/meshes/: base_link.STL  base_link.dae  finger_joint_2.STL  finger_link_1.STL  finger_rack.STL  gripper_housing.STL  link7.STL  link8.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_finger_1.STL  link_finger_2.STL
svenzva_description/meshes/accessories/: finger_center.STL  finger_pen_holder.STL  finger_standard.STL  finger_standard_tapped.STL  vacuum_holder.STL
svenzva_description/robots/: svenzva_arm.urdf  svenzva_arm.urdf.minimal  svenzva_arm.xacro
svenzva_description/robots/accessories/: fingers.xacro  pen_holder.xacro  vacuum_holder.xacro
svenzva_description/scripts/: generate_urdf.bash
svenzva_description/textures/: link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
svenzva_drivers/: CMakeLists.txt  package.xml  setup.py
svenzva_drivers/config/: RevelFirmwareDynamic.cfg  compliance_controller.yaml  compliant_control_params.yaml  control_params.yaml  control_params_medium_vel.yaml  controller_params.yaml  home_position.yaml  joint_trajectory_controller.yaml  tilt.yaml  torque.yaml
svenzva_drivers/include/dynamixel_control_hw/: dynamixel_hardware_interface.hpp  dynamixel_loop.hpp
svenzva_drivers/launch/: controller_manager.launch  dyn_control.launch  ros_control.launch  start_tilt_controller.launch  start_torque_control.launch  svenzva_bringup.launch
svenzva_drivers/src/: close_gripper.py  dynamixel_joint_state_publisher.py  hold_arm.py  kdl_grav.cpp  open_gripper.py  svenzva_driver.py
svenzva_drivers/src/ros_control/: dynamixel_control_hw.cpp  dynamixel_hardware_interface.cpp  dynamixel_loop.cpp
svenzva_drivers/src/svenzva_drivers/: close_gripper.py  collision_aware_cart_control.py  dynamic_reconfigure_server.py  joint_state_publisher.py  joint_state_publisher_small.py  joint_trajectory_action_controller.py  revel_arm_services.py  revel_cartesian_controller.py  revel_cartesian_vel.cpp  revel_gripper_server.py  revel_joint_controller.py  svenzva_compliance_controller.py  svenzva_driver.py  svenzva_dynamics.cpp  svenzva_kinematics.py
svenzva_drivers/srv/: HomeArm.srv
svenzva_joy/: CMakeLists.txt  README.md  package.xml
svenzva_joy/launch/: svenzva_2axis_custom.launch  svenzva_3axis_custom.launch  svenzva_6axis_custom.launch  svenzva_joy.launch  svenzva_xbox_joy.launch
svenzva_joy/src/: svenzva_2axis_controller.cpp  svenzva_3axis_controller.cpp  svenzva_6axis_controller.cpp  svenzva_joystick_controller.cpp
svenzva_moveit/: .setup_assistant  CMakeLists.txt  package.xml
svenzva_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_control_controllers.yaml  svenzva_arm.srdf
svenzva_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  start_moveit.launch  svenzva_arm_gazebo_moveit_controller_manager.launch.xml  svenzva_arm_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
svenzva_msgs/: CMakeLists.txt  package.xml
svenzva_msgs/action/: Gripper.action  SvenzvaJoint.action
svenzva_msgs/msg/: MotorState.msg
svenzva_msgs/srv/: SetControlMode.srv  SetTorqueEnable.srv
svenzva_ros/: CMakeLists.txt  package.xml
svenzva_simulation/: CMakeLists.txt  package.xml
svenzva_simulation/launch/: gazebo_ros_control.launch  moveit.launch  moveit_demo.launch
svenzva_simulation/src/: trajectory_publisher.py
svenzva_utils/: CMakeLists.txt  package.xml  setup.py
svenzva_utils/config/: demo.yaml  movie_test_one.yaml  skating_propel.yaml  skating_to_propel.yaml  watering_plant.yaml
svenzva_utils/launch/: timed_joystick_bringup.launch
svenzva_utils/scripts/: bringup_exhibit.bash  close_gripper.py  install_bringup.bash  open_gripper.py  uninstall_bringup.bash
svenzva_utils/src/: kinesthetic_teaching_console.py
svenzva_utils/src/svenzva_utils/: kinesthetic_teaching_console.py  publish_moveit_collision.py
svenzva_utils/udev/: 75-usb-rw.rules
