<?xml version="1.0"?>
<package>
  <name>svenzva_demo</name>
  <version>0.0.0</version>
  <description>The svenzva_demo package</description>

  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>svenzva_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>svenzva_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
