<?xml version="1.0"?>
<package>
  <name>svenzva_description</name>
  <version>0.0.1</version>
  <description>Svenzva robot description files</description>
  
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
  </export>
</package>
