<?xml version="1.0"?>
<package>
  <name>svenzva_description</name>
  <version>0.0.1</version>
  <description>Svenzva robot description files</description>

  <url type="website">http://wiki.ros.org/svenzva_description</url>
  <url type="repository">https://github.com/SvenzvaRobotics/svenzva_ros.git</url>
  <url type="bugtracker">https://github.com/SvenzvaRobotics/svenzva_ros/issues</url>

  <author email="max@svenzva.com">Max Svetlik</author>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
  </export>
</package>
