<?xml version="1.0"?>
<package>
  <name>svenzva_joy</name>
  <version>0.0.0</version>
  <description>The svenzva_joy package</description>
  <url type="website">http://wiki.ros.org/svenzva_joy</url>
  <url type="repository">https://github.com/SvenzvaRobotics/svenzva_ros.git</url>
  <url type="bugtracker">https://github.com/SvenzvaRobotics/svenzva_ros/issues</url>

  <author email="max@svenzva.com">Max Svetlik</author>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>svenzva_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>svenzva_msgs</run_depend>


  <export>
  </export>
</package>
