<package>
  <name>svenzva_msgs</name>
  <version>0.1.0</version>
  <description>
  Svenzva arm and state related messages.
  </description>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>

  <author>Max Svetlik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
