<package>
  <name>svenzva_msgs</name>
  <version>0.1.0</version>
  <description>
  Svenzva arm and state related messages.
  </description>
  <url type="website">http://wiki.ros.org/svenzva_msgs</url>
  <url type="repository">https://github.com/SvenzvaRobotics/svenzva_ros.git</url>
  <url type="bugtracker">https://github.com/SvenzvaRobotics/svenzva_ros/issues</url>

  <author email="max@svenzva.com">Max Svetlik</author>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
