<?xml version="1.0"?>
<package>
  <name>svenzva_ros</name>
  <version>0.0.1</version>
  <description>The svenzva_ros meta-package</description>

  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

 <export>
    <metapackage />
 </export>
</package>
