<?xml version="1.0"?>
<package>
  <name>svenzva_ros</name>
  <version>0.0.1</version>
  <description>The svenzva_ros meta-package</description>

  <url type="website">http://wiki.ros.org/svenzva_ros</url>
  <url type="repository">https://github.com/SvenzvaRobotics/svenzva_ros.git</url>
  <url type="bugtracker">https://github.com/SvenzvaRobotics/svenzva_ros/issues</url>

  <author email="max@svenzva.com">Max Svetlik</author>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

 <export>
    <metapackage />
 </export>
</package>
