<?xml version="1.0"?>
<package>
  <name>svenzva_utils</name>
  <version>0.0.1</version>
  <description>Svenzva Arm utilities that streamline arm-code interaction</description>
  <url type="website">http://wiki.ros.org/svenzva_utils</url>
  <url type="repository">https://github.com/SvenzvaRobotics/svenzva_ros.git</url>
  <url type="bugtracker">https://github.com/SvenzvaRobotics/svenzva_ros/issues</url>

  <author email="max@svenzva.com">Max Svetlik</author>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>mx_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>svenzva_drivers</build_depend>
  <build_depend>svenzva_msgs</build_depend>
  <build_depend>python-yaml</build_depend>
  <run_depend>mx_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>svenzva_drivers</run_depend>
  <run_depend>svenzva_msgs</run_depend>
  <run_depend>python-yaml</run_depend>


  <export>
  </export>
</package>
